fix responsivness on mobile

--- a/style.css
+++ b/style.css
@@ -45,7 +45,6 @@ body, html {
   .caption span.border1 {
     
     color: aliceblue;
-    padding: 18px;
     font-size: 65px;
     letter-spacing: 5px;
   } 
